# werderDatenbank

./: .gitignore  README.md  compose.yaml  main.py  migrate_db.py  pyproject.toml  requirements.txt
app/: Dockerfile  requirements.txt  wsgi.py
athletes/: __init__.py  auth.py  config.py  map.py
athletes/latex/: __init__.py  print.py
athletes/models/: data_classes.py  models.py
athletes/scraping/: ladv.py
athletes/static/: index.css
athletes/templates/: add_database_entry.html  athletes.html  base.html  coming_events.html  events.html  index.html  keno.html  performances.html  print_results.html  profile.html  rankings.html  results.html
athletes/views/: routes.py
src/tfomat/: __init__.py  config.py  ladv_scraper.py  models.py  print.py  views.py
src/tfomat/static/: index.css
src/tfomat/templates/: add_qualinorm.html  athletes.html  base.html  coming_events.html  events.html  index.html  performances.html  print_results.html  profile.html  rankings.html  results.html
utils/: clear_db_duplicates.py  database_update.sh  db_test.py  duplicated_ids.txt  query_db.py  update_database.py
