# Copyright (C) 2024  Keno Krieger <kriegerk@uni-bremen.de>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfomat"
version = "0.0.1"
authors = [
  { name="Keno Krieger", email="kriegerk@uni-bremen.de" },
]
description = "A package for fetching track and field results"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = "< 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy ~= 1.26.4",
    "requests",
    "bs4",
    "flask < 3 ",
    "flask_nav",
    "flask_bootstrap",
    "flask_restful",
    "flask_sqlalchemy",
    "python-dotenv",
    "pylatex"
]

[project.scripts]
tfomat-up = "tfomat:_up"

[project.urls]
homepage = "https://github.com/kenokrieger/werderDatenbank"
repository = "https://github.com/kenokrieger/werderDatenbank"
issues = "https://github.com/kenokrieger/werderDatenbank/issues"
