[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tfomat"
version = "0.0.1"
authors = [
  { name="Keno Krieger", email="kriegerk@uni-bremen.de" },
]
description = "A package for fetching track and field results"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = "< 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy ~= 1.26.4",
    "requests ~= 2.32.3",
    "bs4 ~= 0.0.2",
    "flask ~= 2.3.3 ",
    "flask_nav ~= 0.6",
    "flask_bootstrap ~= 3.3.7.1",
    "flask_restful ~= 0.3.10",
    "flask_sqlalchemy ~= 3.1.1",
    "python-dotenv ~= 1.0.1",
    "pylatex ~= 1.4.2"
]

[project.scripts]
tfomat-up = "tfomat:_up"

[project.urls]
homepage = "https://github.com/kenokrieger/werderDatenbank"
repository = "https://github.com/kenokrieger/werderDatenbank"
issues = "https://github.com/kenokrieger/werderDatenbank/issues"
